@@ -1,0 +1,11 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
+
+PLG_SYSTEM_LANGUAGECODE_XML_DESCRIPTION="Provides ability to change the language code in the generated HTML document. The fields will appear if the plugin is enabled."
+PLG_SYSTEM_LANGUAGECODE="System - Language Code"
+PLG_SYSTEM_LANGUAGECODE_FIELD_DESC="Change the language code used for the <em>%s</em> language"
+PLG_SYSTEM_LANGUAGECODE_FIELDSET_DESC="Change the language code for the generated HTML document"
+PLG_SYSTEM_LANGUAGECODE_FIELDSET_LABEL="Language codes"
+
