@@ -15,6 +15,10 @@ body {
 	direction: rtl;
 }
 
+h1, h2, h3 {
+	text-align: right;
+}
+
 /**
  * CSS Reset
  */
