@@ -67,3 +67,249 @@
 	background-image: url(../images/notice-note.png);
 	border-color: #F0DC7E;
 }
+
+/* Common CSS for system debug */
+div#system-debug {
+	clear: both;
+}
+
+#system-debug {
+	background-color: #fff;
+	color: #000;
+	border: 1px dashed silver;
+	padding: 5px;
+	text-align: left;
+}
+
+#system-debug div.dbgHeader {
+	background-color: #ddd;
+	border: 1px solid #eee;
+	font-size: 16px;
+}
+
+#system-debug h3 {
+	margin: 0;
+}
+
+#system-debug a h3 {
+	background-color: #ddd;
+	color: #000;
+	font-size: 14px;
+	padding: 5px;
+	text-decoration: none;
+	margin: 0px;
+}
+
+#system-debug a:hover,
+#system-debug a:focus,
+#system-debug a:active,
+#system-debug a:link,
+#system-debug a:visited {
+	background-color: #ddd;
+	color: #000;
+	text-decoration:none;
+}
+
+#system-debug a:hover h3,
+#system-debug a:focus h3 {
+	background-color: #4d4d4d;
+	color: #ddd;
+	font-size: 14px;
+	cursor: pointer;
+	text-decoration:none;
+}
+
+#system-debug div.dbgContainer {
+	padding: 10px;
+}
+
+#system-debug span.dbgCommand {
+	color: blue;
+	font-weight: bold;
+}
+
+#system-debug span.dbgTable {
+	color: green;
+	font-weight: bold;
+}
+
+#system-debug b.dbgOperator {
+	color: red;
+	font-weight: bold;
+}
+
+#system-debug h1 {
+	background-color: #2c2c2c;
+	color: #fff;
+	padding: 10px;
+	margin: 0;
+	font-size: 16px;
+	line-height: 1em;
+}
+
+#system-debug h4 {
+	font-size: 14px;
+	font-weight:bold;
+	margin: 5px 0 0 0;
+}
+
+#system-debug h5 {
+	font-size: 13px;
+	font-weight:bold;
+	margin: 5px 0 0 0;
+}
+
+div#system-debug {
+	margin: 5px;
+}
+
+#system-debug ol {
+	margin-left: 25px;
+	margin-right: 25px;
+	text-align: left;
+	direction: ltr;
+}
+
+#system-debug ul {
+	list-style: none;
+	text-align: left;
+	direction: ltr;
+}
+
+#system-debug li {
+	font-size: 13px;
+	margin-bottom: 10px;
+}
+
+#system-debug code {
+	font-size: 13px;
+	text-align: left;
+	direction: ltr;
+}
+
+#system-debug p {
+	font-size: 13px;
+}
+
+
+/* Common CSS for system debug */
+
+#system-debug {
+	background-color: #fff;
+	color: #000;
+	border: 1px dashed silver;
+	padding: 10px;
+}
+
+#system-debug div.dbgHeader {
+	background-color: #ddd;
+	border: 1px solid #eee;
+	font-size: 16px;
+}
+
+#system-debug h3 {
+	margin: 0;
+}
+
+#system-debug a h3 {
+	background-color: #ddd;
+	color: #000;
+	font-size: 14px;
+	padding: 5px;
+	text-decoration: none;
+	margin: 0px;
+}
+
+#system-debug .dbgerror a h3 {
+	background-color: red;
+}
+
+#system-debug a:hover,
+#system-debug a:focus,
+#system-debug a:active,
+#system-debug a:link,
+#system-debug a:visited {
+	background-color: #ddd;
+	color: #000;
+	text-decoration:none;
+}
+
+#system-debug a:hover h3,
+#system-debug a:focus h3 {
+	background-color: #4d4d4d;
+	color: #ddd;
+	font-size: 14px;
+	cursor: pointer;
+	text-decoration:none;
+}
+
+#system-debug div.dbgContainer {
+	padding: 10px;
+}
+
+#system-debug span.dbgCommand {
+	color: blue;
+	font-weight: bold;
+}
+
+#system-debug span.dbgTable {
+	color: green;
+	font-weight: bold;
+}
+
+#system-debug b.dbgOperator {
+	color: red;
+	font-weight: bold;
+}
+
+#system-debug h1 {
+	background-color: #2c2c2c;
+	color: #fff;
+	padding: 10px;
+	margin: 0;
+	font-size: 16px;
+	line-height: 1em;
+}
+
+#system-debug h4 {
+	font-size: 14px;
+	font-weight:bold;
+}
+
+#system-debug h5 {
+	font-size: 13px;
+	font-weight:bold;
+	margin-top: 5px;
+}
+
+div#system-debug {
+	margin: 5px;
+}
+
+#system-debug ol {
+	margin-left: 25px;
+	margin-right: 25px;
+}
+
+#system-debug ul {
+	list-style: none;
+}
+
+#system-debug li {
+	font-size: 13px;
+	margin-bottom: 10px;
+}
+
+#system-debug code {
+	font-size: 13px;
+	text-align: left;
+	direction: ltr;
+}
+
+#system-debug p {
+	font-size: 13px;
+}
+
+#system-debug div.dbgHeader.dbgerror {
+	background-color: red;
+}
