@@ -101,18 +101,6 @@ class plgSystemDebug extends JPlugin
 
 		$html = '';
 
-		// Some "eyeprotecting" CSS
-		$html .= '<style>
-		#system-debug { background-color: #fff; border: 1px dashed silver;}
-		div.dbgHeader { background-color: #cccccc; border: 1px solid #eee; font-size: 16px; }
-		div.dbgHeader:hover { background-color: #fff; border: 1px solid silver; cursor: pointer; }
-		div.dbgContainer { padding: 0.5em; }
-		span.dbgCommand { color: blue; }
-		span.dbgTable { color: green; }
-		b.dbgOperator { color: orange; }
-		#system-debug h1 { background-color: black; color: lime; padding: 0.3em; font-family: monospace; margin: 0; }
-		</style>';
-
 		// Some "mousewheel protecting" JS
 		$html .= "<script>function toggleContainer(name) {
 			var e = document.getElementById(name);// MooTools might not be available ;)
@@ -155,7 +143,8 @@ class plgSystemDebug extends JPlugin
 		{
 			if ($this->params->get('language_errorfiles', 1))
 			{
-				$html .= $this->display('language_files_in_error');
+				$languageErrors = JFactory::getLanguage()->getErrorFiles();
+				$html .= $this->display('language_files_in_error', $languageErrors);
 			}
 
 			if ($this->params->get('language_files', 1))
@@ -177,13 +166,21 @@ class plgSystemDebug extends JPlugin
 	/**
 	 * General display method.
 	 *
-	 * @param   string  $item  The item to display
+	 * @param   string  $item    The item to display
+	 * @param   array   $errors  Errors occured during execution
 	 *
 	 * @return string
 	 */
-	protected function display($item)
+	protected function display($item, array $errors = array())
 	{
 		$title = JText::_('PLG_DEBUG_'.strtoupper($item));
+
+		$status = '';
+
+		if(count($errors))
+		{
+			$status = ' dbgerror';
+		}
 
 		$fncName = 'display'.ucfirst(str_replace('_', '', $item));
 
@@ -196,7 +193,9 @@ class plgSystemDebug extends JPlugin
 
 		$js = "toggleContainer('dbgContainer".$item."');";
 
-		$html .= '<div class="dbgHeader" onclick="'.$js.'">'.$title.'</div>';
+		$class = 'dbgHeader'.$status;
+
+		$html .= '<div class="'.$class.'" onclick="'.$js.'"><a href="javascript:void(0);"><h3>'.$title.'</h3></a></div>';
 
 		$style = ' style="display: none;"';//@todo set with js.. ?
 
@@ -254,7 +253,7 @@ class plgSystemDebug extends JPlugin
 				{
 					$js = "toggleContainer('dbgContainer_session".$id."');";
 
-					$html .= '<div class="dbgHeader" onclick="'.$js.'">'.$sKey.'</div>';
+					$html .= '<div class="dbgHeader" onclick="'.$js.'"><a href="javascript:void(0);"><h3>'.$sKey.'</h3></a></div>';
 
 					$style = ' style="display: none;"';//@todo set with js.. ?
 
@@ -269,7 +268,9 @@ class plgSystemDebug extends JPlugin
 					continue;
 				}
 
+				$html .= '<code>';
 				$html .= $sKey.' &rArr; '.$entries.'<br />';
+				$html .= '</code>';
 			}
 		}
 
@@ -338,8 +339,10 @@ class plgSystemDebug extends JPlugin
 
 		$bytes = JProfiler::getInstance('Application')->getMemory();
 
+		$html .= '<code>';
 		$html .= JHtml::_('number.bytes', $bytes);
 		$html .= ' ('.number_format($bytes).' Bytes)';
+		$html .= '</code>';
 
 		return $html;
 	}
@@ -415,7 +418,7 @@ class plgSystemDebug extends JPlugin
 
 			$text = $this->highlightQuery($sql);
 
-			$html .= '<li>'.$text.'</li>';
+			$html .= '<li><code>'.$text.'</code></li>';
 		}
 
 		$html .= '</ol>';
@@ -442,8 +445,8 @@ class plgSystemDebug extends JPlugin
 
 			foreach ($selectQueryTypeTicker as $query => $occurrences)
 			{
-				$html .= '<li>'.JText::sprintf('PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES'
-				, $this->highlightQuery($query), $occurrences).'</li>';
+				$html .= '<li><code>'.JText::sprintf('PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES'
+				, $this->highlightQuery($query), $occurrences).'</code></li>';
 			}
 
 			$html .= '</ol>';
@@ -459,8 +462,8 @@ class plgSystemDebug extends JPlugin
 
 			foreach ($otherQueryTypeTicker as $query => $occurrences)
 			{
-				$html .= '<li>'.JText::sprintf('PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES'
-				, $this->highlightQuery($query), $occurrences).'</li>';
+				$html .= '<li><code>'.JText::sprintf('PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES'
+				, $this->highlightQuery($query), $occurrences).'</code></li>';
 			}
 			$html .= '</ol>';
 		}
@@ -481,7 +484,9 @@ class plgSystemDebug extends JPlugin
 
 		if ( ! count($errorfiles))
 		{
-			return JText::_('JNONE');
+			$html .= '<p>' . JText::_('JNONE') . '</p>';
+
+			return $html;
 		}
 
 		$html .= '<ul>';
@@ -542,9 +547,13 @@ class plgSystemDebug extends JPlugin
 
 		$orphans = JFactory::getLanguage()->getOrphans();
 
+		$html = '';
+
 		if ( ! count($orphans))
 		{
-			return JText::_('JNONE');
+			$html .= '<p>' . JText::_('JNONE') . '</p>';
+
+			return $html;
 		}
 
 		ksort($orphans, SORT_STRING);
@@ -607,7 +616,6 @@ class plgSystemDebug extends JPlugin
 			}
 		}
 
-		$html = '';
 
 		foreach ($guesses as $file => $keys)
 		{
