@@ -202,10 +202,6 @@ form fieldset dd
 .login-fields label
 {float:right}
 
-#system-debug li {
-direction: ltr;
-}
-
 /* ++++++++++++++  pagination  ++++++++++++++ */
 
 #main .pagination
