@@ -27,8 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+15-Dec-2011 Christophe Demko
+ # [#27382] Add appropriatestyling to system debug plugin (Andrea Tarr)
+
 15-Dec-2011 Jean-Marie Simonet
-# [#27393] undefined $option com_media
+ # [#27393] undefined $option com_media
 
 14-Dec-2011 Jean-Marie Simonet
  # [#27383] PHP 5.3 Strict Mode complains about Strict Standards on some methods. Thanks Jean-Claude
